# diffpes

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/badges/: loc.json  loc_badge.py
.github/workflows/: release.yml  tests.yml
docs/source/: conf.py  index.rst
docs/source/_ext/: param_parser.py  test_links.py
docs/source/api/: certify.rst  index.rst  inout.rst  maths.rst  radial.rst  simul.rst  tightb.rst  types.rst  utils.rst
docs/source/guides/: arpes-geometry-and-kinematics.md  certified-forward-models.md  expanded-wrappers-and-conventions.md  index.md  jax-transformability-and-gradients.md  matrix-elements-and-polarization.md  pytree-architecture.md  simulation-levels.md  spectral-broadening-and-self-energy.md  vasp-data-ingestion.md
docs/source/tests/: certify.rst  gradients.rst  index.rst  inout.rst  maths.rst  radial.rst  simul.rst  tightb.rst  types.rst  utils.rst
docs/source/tutorials/: certified-forward-model.md  geometry-and-kinematics.md  index.md  quickstart.md
scripts/: generate_regression_references.py
src/diffpes/: __init__.py
src/diffpes/certify/: __init__.py  canonical.py  checks.py  checksums.py  contracts.py  dependencies.py  evidence.py  execution.py  inspect.py  models.py  policy.py  provenance.py  registry.py  reproduction.py  resolvers.py  waivers.py
src/diffpes/certify/_registry/: manifest.json
src/diffpes/certify/_registry/model-cards/: org.diffpes.model.arpes.tb_radial@0.1.0.md
src/diffpes/inout/: __init__.py  certificate.py  chgcar.py  doscar.py  eigenval.py  hdf5.py  helpers.py  kpoints.py  plotting.py  poscar.py  procar.py
src/diffpes/maths/: __init__.py  dipole.py  gaunt.py  rotations.py  safe.py  spherical_harmonics.py
src/diffpes/radial/: __init__.py  bessel.py  integrate.py  wavefunctions.py
src/diffpes/simul/: __init__.py  broadening.py  crosssections.py  expanded.py  forward.py  kinematics.py  oam.py  polarization.py  resolution.py  self_energy.py  spectrum.py  workflow.py
src/diffpes/tightb/: __init__.py  diagonalize.py  hamiltonian.py  kspace.py  projections.py
src/diffpes/types/: __init__.py  aliases.py  bands.py  certification.py  certification_constants.py  constants.py  context.py  contracts.py  dos.py  experiment.py  geometry.py  inspection.py  kpath.py  orbital_constants.py  params.py  provenance.py  radial_params.py  self_energy.py  tables.py  tb_model.py  vasp_constants.py  volumetric.py
src/diffpes/utils/: __init__.py  math.py
tests/: __init__.py  _assertions.py  _factories.py  _gradients.py  _types.py  conftest.py  test_assertions.py  test_repo_floor.py
tests/data/kspace/: README.md  chinook_env_freeze.txt  kz_kpt_reference.json  mesh_reduce_reference.json  tilt_polarization_reference.json
tests/test_diffpes/: test_gradients_harness.py
tests/test_diffpes/_reference_data/: MANIFEST.md  novice_toy.npz  tb_radial_chain.npz  tb_radial_graphene.npz
tests/test_diffpes/test_certify/: __init__.py  test_canonical.py  test_checks.py  test_checksums.py  test_contracts.py  test_dependencies.py  test_evidence.py  test_execution.py  test_inspect.py  test_models.py  test_policy.py  test_provenance.py  test_registry.py  test_reproduction.py  test_resolvers.py  test_scalability.py  test_waivers.py
tests/test_diffpes/test_contracts/: __init__.py  test_kcartesian_contract.py
tests/test_diffpes/test_inout/: test_certificate.py  test_chgcar.py  test_doscar.py  test_eigenval.py  test_hdf5.py  test_hdf5_all_carriers.py  test_helpers.py  test_kpoints.py  test_plotting.py  test_poscar.py  test_procar.py  test_vasp_readers.py
tests/test_diffpes/test_maths/: test_dipole.py  test_gaunt.py  test_rotations.py  test_safe.py  test_spherical_harmonics.py
tests/test_diffpes/test_radial/: __init__.py  test_bessel.py  test_integrate.py  test_wavefunctions.py
tests/test_diffpes/test_simul/: test_broadening.py  test_crosssections.py  test_expanded.py  test_forward.py  test_kinematics.py  test_oam.py  test_plan02_gates.py  test_polarization.py  test_resolution.py  test_self_energy.py  test_spectrum.py  test_tb_radial_gradients.py  test_workflow.py
tests/test_diffpes/test_tightb/: test_diagonalize.py  test_hamiltonian.py  test_kspace.py  test_projections.py
tests/test_diffpes/test_types/: test_aliases.py  test_bands.py  test_certification.py  test_constants.py  test_context.py  test_contracts.py  test_dos.py  test_experiment.py  test_factories.py  test_geometry.py  test_inspection.py  test_kpath.py  test_new_types.py  test_params.py  test_provenance.py  test_radial_params.py  test_self_energy.py  test_tb_model.py  test_validation.py  test_volumetric.py
tests/test_diffpes/test_utils/: test_math.py
