[project]
name = "diffpes"
version = "2026.06.01"
description = "Differentiable ARPES simulations in JAX"
authors = [
    {name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov"},
    {name = "Jacob Cook", email = "cookjl2@ornl.gov"},
]
license = "MIT"
license-files = ["LICENSE"]
maintainers = [{name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov"}]
keywords = [
    "ARPES",
    "MBE",
    "JAX",
    "Differentiable Programming",
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.2.1",
    "matplotlib>=3.10.0",
    "jax>=0.7.0",
    "jaxtyping>=0.3.0",
    "chex>=0.1.85",
    "beartype>=0.21.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "h5py>=3.15.1",
    "equinox>=0.13.8",
    "optimistix>=0.1.0",
    "optax>=0.2.8",
    "lineax>=0.1.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.7.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12>=9.5.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=3.0.2",
    "nbsphinx>=0.9.7",
    "myst-parser>=2.0.0",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "furo>=2025.7.19",
    "sphinx-autodoc-typehints>=3.0.1",
    "numpydoc>=1.9.0",
    "pydoclint>=0.7.3",
    "interrogate>=1.7.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.0.0",
    "chex>=0.1.89",
    "psutil>=5.9",
    "hypothesis>=6.100",
]
notebooks = [
    "ipywidgets>=8.1.0",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
]
dev = [
    "diffpes[docs,test,notebooks]",
    "ruff>=0.12.9",
    "pygount>=3.1.0",
    "pre-commit>=4.5.1",
    "ty>=0.0.19",
]
dev_cuda = [
    "diffpes[dev,cuda]",
]
all = [
    "diffpes[docs,test,dev,notebooks,cuda]",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-n auto --dist loadgroup --jaxtyping-packages=diffpes,beartype.beartype"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "big_mem: serialize memory-intensive tests on one xdist worker",
    "rss_limit_mb(limit): override the per-test RSS growth limit in MiB",
]

[tool.coverage.run]
source = ["diffpes"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.pydoclint]
style = "numpy"
check-return-types = false
check-yield-types = true
check-arg-order = true
require-return-section-when-returning = true
require-yield-section-when-yielding = true

[tool.interrogate]
fail-under = 90
exclude = ["tests", "build", "dist"]
ignore-init-module = true
quiet = true

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
line-length = 79
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "A",
    "C4",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "ERA",
    "PL",
]
ignore = [
    "ANN401",
    "PYI021",
    "F722",
    "COM812",
    "D205",
    "D212",
    "UP037",
    "F821",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "jax.numpy.zeros",
    "jax.numpy.ones",
    "jax.numpy.array",
    "jax.numpy.asarray",
    "jnp.zeros",
    "jnp.ones",
    "jnp.array",
    "jnp.asarray",
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-third-party = ["jax", "jaxtyping"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "ANN",
    "S",
    "PLR",
    "ARG",
    "ERA",
    "B",
    "A",
    "C4",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "N",
    "UP",
    "F401",
    "F841",
    "PLR2004",
    "E501",
    "E741",
    "PLC0415",
]
# Plan 12 removes these legacy suppressions after traced validation and test
# documentation have been migrated without changing physics behavior.
"src/diffpes/types/*.py" = ["PLW0108"]
"src/diffpes/types/geometry.py" = ["PLR2004", "PLW0108"]
# Physics modules: standard physics variable names (H=Hamiltonian,
# l/m=quantum numbers, M=matrix element, R=radial/lattice, W=work fn)
"src/diffpes/tightb/*.py" = ["E741", "N803", "N806"]
"src/diffpes/maths/*.py" = ["E741", "N803", "N806", "ARG001"]
"src/diffpes/simul/forward.py" = ["E741", "N806"]
"src/diffpes/simul/self_energy.py" = ["S101"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src"]
exclude = ["tests"]
